Fix vertical overflow on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body, html {
 }
 
 body {
-  @apply bg-neutral-100 text-neutral-800 text-sm flex items-center justify-center;
+  @apply bg-neutral-100 text-neutral-800 text-sm;
 }
 
 button.action {
